tests/NormalTests/paczka1/fuzzy1/55594071.err
Error in line 3: YnmpMw7C5HG A558 11,6
Error in line 15: YnmpMw7C5HG A607 9,7
Error in line 27: KOq7 S643 18,6
Error in line 28: A607 S791 12,4
